[gd_scene load_steps=7 format=2]

[ext_resource path="res://Hazards/Chaser.gd" type="Script" id=1]
[ext_resource path="res://GFX/SPRITES/thwomp_mini.png" type="Texture" id=2]
[ext_resource path="res://Hazards/Hazards.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 170.382, 170.923 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 172.194, 24.7144 )

[sub_resource type="Animation" id=3]
length = 0.75
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55, 0.6, 0.65 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -10, 0 ), Vector2( 0, 0 ), Vector2( 10, 0 ), Vector2( 0, 0 ), Vector2( -10, 0 ), Vector2( 0, 0 ), Vector2( 10, 0 ), Vector2( 0, 0 ), Vector2( -10, 0 ), Vector2( 0, 0 ), Vector2( -10, 0 ), Vector2( 0, 0 ), Vector2( 10, 0 ) ]
}

[node name="Chaser" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="Sprite"]
collision_layer = 4
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite/Area2D"]
shape = SubResource( 1 )

[node name="SurfaceChecker" type="Area2D" parent="Sprite"]
gravity_distance_scale = 1.0
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite/SurfaceChecker"]
position = Vector2( 1.55512, 144.509 )
shape = SubResource( 2 )

[node name="RayCast_Down" type="RayCast2D" parent="."]
position = Vector2( 0, 207.736 )
enabled = true
cast_to = Vector2( 0, 1000 )

[node name="RayCast_Up" type="RayCast2D" parent="."]
position = Vector2( 0, -160.918 )
rotation = 3.14159
enabled = true
cast_to = Vector2( 0, 1000 )

[node name="RayCast_Left" type="RayCast2D" parent="."]
position = Vector2( -212.019, 1.07632 )
rotation = 1.5708
enabled = true
cast_to = Vector2( 0, 1000 )

[node name="RayCast_Right" type="RayCast2D" parent="."]
position = Vector2( 179.983, 1.07632 )
rotation = -1.5708
enabled = true
cast_to = Vector2( 0, 1000 )

[node name="Timer" type="Timer" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/rumble = SubResource( 3 )
[connection signal="body_entered" from="Sprite/Area2D" to="Sprite/Area2D" method="_on_Hazard_body_entered"]
[connection signal="body_exited" from="Sprite/Area2D" to="Sprite/Area2D" method="_on_Hazard_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
